--- a/public/assets/css/main/custom.css
+++ b/public/assets/css/main/custom.css
@@ -9,7 +9,8 @@
     width: auto;
     height: auto;
 
-    background: #A137DF;
+    /* background: #A137DF; */
+    background-image: linear-gradient(to right, #A137DF 0%, #FA14FF 100%);
     border-radius: 20px;
     /* margin-left: 119px; */
     color: white;
