--- a/public/assets/css/main/custom.css
+++ b/public/assets/css/main/custom.css
@@ -17,6 +17,25 @@
     border: none;
     font-weight: bold;
 }
+.btn-login2 {
+    /* display: flex; */
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 40px;
+    /* gap: 10px; */
+
+    width: auto;
+    height: auto;
+
+    /* background: #A137DF; */
+    background-image: linear-gradient(to right, #A137DF 0%, #FA14FF 100%);
+    border-radius: 20px;
+    /* margin-left: 100px; */
+    color: white;
+    border: none;
+    font-weight: bold;
+}
 
 #logo_login{
     justify-content: center;
